--- a/hobbies.html
+++ b/hobbies.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h2>My Hobbies</h2>
+    <hr>
     <ol>
         <li>Football</li>
         <li>Travelling</li>
